Dispatch audit .zip to TKW (#71)
* Moved audit sending away to separate class.

* Abstracted away an AuditDispatcher from the existing logic sending the zip to TKW, added a component to collect the required metadata from the audits for the dispatcher to include as headers on the request. Additionally reshuffled the ValidationService's innards to make more sense.

* Added/updated test suites for new and modified logic.

* Added an AlternativeRestTemplate as the existing, default RestTemplate is known to mangle the Content-Transfer-Encoding header.

* Added logic to deduce the requests' CDS API version from the API endpoint selected on the validation page.

* Updated audit validation logic to only include those that hold a valid FHIR content type.

* Updated tests to reflect new logic changes.

* Slightly refactored the FhirMessageAudit transformation logic, added more tests to cover logic.

* Removed the expectation that TKW will return a response body.

Co-authored-by: Ionut-Claudiu (John) Herciu <john.herciu1@nhs.net>